cluster/apps/media/sonarr/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: media
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`sonarr.${SECRET_DOMAIN}`)
    kind: Rule
    priority: 10
    services:
    - name: sonarr
      namespace: media
    middlewares:
    - name: rfc1918
  tls:
    secretName: "${SECRET_DOMAIN/./-}"
